# Media-Calendar

./: .env.example  .gitignore  Claude.MD  README.md  coverage_report.py  curate.py  discover.py  generate_calendar.py  notify.py  pyproject.toml  search_discover.py
.github/workflows/: ci.yml  curation.yml  discovery-refresh.yml  notifications.yml  open-web-discovery.yml
Claude/Agents/: API-Reviewer.md  Pipeline-Reviewer.md  media-specialist.md
Claude/Commands/: Add notification.md  Add-deadline.md  Commit.md  (+4 more)
docs/: automation-roadmap.md  operations-guide.md
tests/: test_calendar_generator.py  test_calendar_generator_step.py  test_coverage_report_cli.py  test_curation_log.py  test_data_curation_agent.py  test_data_curation_agent_input.py  test_data_curation_agent_output.py  test_data_curation_step.py  test_deadline.py  test_deadline_store.py  test_discover_cli.py  test_discovery_candidate.py  test_discovery_candidate_batch.py  test_discovery_comparator.py  test_discovery_promoter.py  test_discovery_refresh_step.py  test_notification_composer_agent.py  test_notification_composer_input.py  test_notification_composer_output.py  test_notification_composer_step.py  test_notification_item.py  test_notification_log.py  test_notification_services.py  test_notify_cli.py  test_open_web_discovery_step.py  test_search_discover_cli.py  test_source_coverage.py  test_source_detector.py  test_source_detector_adapters.py  test_source_discovery_agent.py  test_source_fetcher.py  test_source_freshness.py  test_source_health.py  test_source_registry.py  test_source_snapshotter.py
(+58 files in other folders)
