[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-calendar"
version = "0.1.0"
description = "Media calendar models and utilities."
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
