[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-calendar"
version = "0.1.0"
description = "Media calendar models and utilities."
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8,<9",
    "ruff>=0.6,<1",
    "types-PyYAML>=6.0.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
packages = ["media_calendar"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
